# cook_code

./: .gitignore  README.md
basic_lib/cereal/: build.sh  data.xml  naming_value.cpp  simple_serialize.cpp
basic_lib/cmd_line_opt/: main.cpp
basic_lib/eigen/: build_eigen.sh  eigen_first.cc  matrice_vector.cc
basic_lib/spdlog/: build.sh  demo  first.cc
c++/: split.cc
c++/eigen/: CMakeLists.txt  eigen_practice.cc
c++/simple_plugin_lib/: CMakeLists.txt  README.md  main.cpp  plugin_lib.h
code-old/14-lessons/lesson3/: README.md
code-old/14-lessons/lesson3/src/: CMakeLists.txt  compute_error.cpp  draw_traj.cpp
code-old/14-lessons/lesson4/: README.md
code-old/14-lessons/lesson4/src/: CMakeLists.txt  gaussnewton.cpp  image_undistort.cpp  stereo_pointcloud.cpp
code-old/14-lessons/lesson5/: CMakeLists.txt  compute_orientation.cpp  decomposeE.cpp  gn_ba.cpp
code-old/14-lessons/lesson5/align_trajectory/: CMakeLists.txt  main.cpp
code-old/14-lessons/lesson6/cv_optical_flow/: CMakeLists.txt  compute_disparity_klt.cpp  compute_pose.cpp  compute_pose.h  direct_method.cpp  main.cpp  optical_flow.cpp  optical_flow.h  pyramid_builder.cpp  pyramid_builder.h  test_cv_copy.cpp  test_cv_img_pyramid.cpp  test_cv_mat_step.cpp  util.h
code-old/code-snippet/ceres_practice/: CMakeLists.txt  curve_fitting.cpp  hello_world.cpp  numeric_derivatives.cpp  powell_function.cpp  robust_curve_fitting.cpp
code-old/code-snippet/stl-trick/: count_lines.cpp
code-old/code-snippet/string_split/: main.cpp
code-old/code-snippet/timestamp/: main.cpp  timestamp.cpp  timestamp.h
code-old/compare_orb/: CMakeLists.txt  ice_ba_orb.cc  main_ice_ba_orb.cpp  main_orb_slam2.cpp  openvslam_orb.cpp
code-old/compare_orb/feature/: CMakeLists.txt  orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_params.cc
code-old/cv-practice/cv_yaml/: CMakeLists.txt  main.cpp
code-old/cv-practice/edge_feature/: CMakeLists.txt  edge_point_detect.cpp  line_detect.cpp
code-old/cv-practice/image_enhance/: CMakeLists.txt  image_enhance.cpp
code-old/cv-practice/subpix-demo/: CMakeLists.txt  main.cpp
code-old/dataset_io/: CMakeLists.txt  dataset_euroc.cpp  dataset_fpv.cpp  dataset_fpv.h  dataset_zju.h  main.cpp  split.cpp  timestamp.cpp  timestamp.h
code-old/dataset_io-mono/: README.md
code-old/dataset_io-mono/src/: CMakeLists.txt  main.cpp  vio_sequence.cpp  vio_sequence.h  zju_sequence.cpp  zju_sequence.h
code-old/feature_tracking/: CMakeLists.txt  README.md
code-old/line_feature/cv_line_demo/: CMakeLists.txt  line_extraction.cpp  line_iterator.h  line_match.cpp  line_tracking.cpp
code-old/line_feature/cv_line_demo/dataset_io/: CMakeLists.txt  dataset_euroc.h  dataset_io.cpp  main.cpp  split.h
code-old/line_feature/lsd_lbd/: CMakeLists.txt  canny_edge.cpp  fast_line.cpp  hough_line.cpp  lsd_detect.cpp  lsd_lbd.cpp
code-old/line_feature/lsd_lbd/dataset_io/: dataset_io.h  dataset_zju.cpp
code-old/line_feature/test_bresenham/: CMakeLists.txt  line_iterator.cpp  main.cpp
code-old/tools/cmd_line_opt/: CMakeLists.txt
code-old/tools/gflags/: CMakeLists.txt  config.cpp  config.h  main.cpp
cv/camera_undisortion/: CMakeLists.txt  README.md  main.cpp
cv/corner_detect/: CMakeLists.txt  fast.cpp  harris.cpp
cv/cv-stereo-practice/: CMakeLists.txt  compute_vio_param.cpp  cv_image_undistort.cpp  cv_remap.cpp  euroc_sequence.cpp  euroc_sequence.h  stereo_compare.cpp  stereo_rectify_map.cpp  verify_euroc_params.cpp  view_stereo_image.cpp
cv/dolly-zoom-opengl/: CMakeLists.txt  ConsoleApplication1.cpp
cv/epipolar_practice/: CMakeLists.txt  REAMDE.md  fundamental.cc  fundamental.hpp  homography.cc  homography.hpp  main.cpp
cv/line_detect/: CMakeLists.txt  README.md  lsd_opencv3.cpp
cv/mvg_demo/: CMakeLists.txt  ORBmatcherBF.cpp  ORBmatcherBF.h  main.cpp
cv/normalized_point/: CMakeLists.txt  README.md  main.cpp
cv/orb_feature_match/: CMakeLists.txt  ORBmatcherHF.cpp  README.md  match_orb.cpp
cv/shenlan-course/feature/: CMakeLists.txt  harris.cc
python/numpy/: .ycm_extra_conf.py  README.md
python/numpy/noob/: 10_numpy_random.py  1_import_np.py  2_numpy_version.py  3_numpy_zeros.py  4_numpy_set_value.py  5_numpy_arrange.py  6_numpy_reshape.py  7_numpy_nonzero.py  8_numpy_eye.py  9_numpy_diag.py
python/numpy/primer/: 1_chessboard_8x8.py  2_numpy_min_max.py  3_numpy_tile.py  4_numpy_normlize.py  5_numpy_dot.py
python/python100days/day1/: demo_tutorial.py  hello.py
python/python100days/day10/: simple_tkinter.py
python/python100days/day2/: check_type.py  circle.py  input_compute.py  is_leap.py  temperature.py  variable.py
python/python100days/day3/: random_face.py  unit_transform.py
python/python100days/day6/: gcd_lcm.py  invert_num.py  is_palindrome.py
python/python100days/day7/: clock.py  point.py  test_private.py
python/python100days/day9/: class_method.py  oop.py  person.py  poly_morphism.py  slots_magic.py  static.py
python/python_basic/: python_re.py  simple_generator.py
slam/ba_demo/: CMakeLists.txt  README.md
slam/ba_demo/src/: BALProblem.cpp  BALProblem.h  Data.cpp  Data.h  common.hpp  main.cpp  viewer.cpp  viewer.h
slam/corner_edge_feature/: CMakeLists.txt  README.md  main.cpp
slam/eigen_nolinear_opt/: CMakeLists.txt  gauss_newton.cpp  gradient_descent.cpp  random.hpp  timer.hpp
slam/orb-detect-and-match/: CMakeLists.txt  README.md  detect_bf_match.cpp
slam/simple_ba/: BALProblem.cpp  BALProblem.h  CMakeLists.txt  Data.h  README.md  main.cpp
slam/slam_book/eigen/: eigenMatrix.cpp
slam/slam_learning_homework/homework-1/: rename.py
slam/slam_learning_homework/homework-2/: Eigen.cpp  build.sh
slam/slam_learning_homework/homework-3/: main.cpp
slam/slam_learning_homework/homework-4/: main.cpp
slam/slam_learning_homework/homework-5/: CMakeLists.txt  main.cpp
slam/slam_learning_homework/homework-6/: README.md  trajectory.txt
slam/svd-rigid-transform/: eigen_svd_solve.cc  svd_rigid_transform.py
tools/svg/: usage1.cc  usage2.cc  usage3.cc
